--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<p>hello</
+<!DOCTYPE html>
+
+<html>
+	<head>
+    	<meta charset="utf-8">
+    		<title>MATHIEKNITS</title>
+
+    <!--CSS-->
+    <link rel="stylesheet" href="./indexStyle.css" type="text/css">
+
+    <!--FONTS-->
+    <link href="https://fonts.googleapis.com/css?family=Hammersmith+One|Lato|Raleway|Roboto&display=swap" rel="stylesheet">
+
+	</head>
+
+	<body>
+
+		<div class="container-flex" id="imageFill">
+			<div class="row">
+				<img src='./img/mklogoshadow.png' id="logo">
+			</div>
+
+			<div class="container" id="button">
+				<a href="./MK.html"><button class="btn1"> WELCOME </button></a>
+			</div>
+		</div>
+
+		<div class="col" id="homeSocial">
+			<a href="https://www.mathieknits.etsy.com" target="_blank"><img src='./img/etsy.png' id="socialIcons"></a>
+				&nbsp;&nbsp;&nbsp;
+			<a href="https://www.facebook.com/mathieknits" target="_blank"><img src='./img/facebook.png' id="socialIcons"></a>
+				&nbsp;&nbsp;&nbsp;
+			<a href="https://www.instagram.com/mathieknits" target="_blank"><img src='./img/instagram.png' id="socialIcons"></a>
+		</div>
+		</div>
+	</body>
+
+</html>
