--- a/MKAbout.html
+++ b/MKAbout.html
@@ -129,7 +129,7 @@
                 </div>
             <br>
                 <p id="infoP">
-                    &emsp;My name is Emily Mathieson. I am 29 year old graduate of the Biological Sciences, having focused my degree on Ecology & Fisheries. I completed an internship with the National Park Service as a Native Trout Conservationist in Yellowstone National Park. 
+                    &emsp;My name is Emily Mathieson. I am a 29 year old graduate of the Biological Sciences, having focused my degree on Ecology & Fisheries. I completed an internship with the National Park Service as a Native Trout Conservationist in Yellowstone National Park. 
                 </p>
                 <p id="infoP">
                     &emsp;I am fascinated by the natural world, and this is where the inspiration for selecting the colors I work with comes from. All of my hand-knit items are named after some aspect of the natural world, may it be types of plants, animals, minerals, fossils, or ecological terms.
@@ -228,7 +228,7 @@
                     &emsp;Madelinetosh’s goal is to provide crafters with a painter’s palette of wools to choose from when making and creating for themselves and others and to grow the crafting community around this mutual love of color.
                 </p>
                 <p id="infoP">
-                    &emsp;Madelinetosh also has the widest color library of any other artisan I've ever come across. If you would like a custom item, I would suggest taking a look at Madelinetosh's <a href="http://www.madelinetosh.com" target="_blank">website</a> as well as checking out the FAQ on my website!
+                    &emsp;Madelinetosh also has the widest color library of any other artisan I've ever come across. If you would like a custom item, I would suggest taking a look at Madelinetosh's <a href="http://www.madelinetosh.com" target="_blank">website</a> as well as checking out the <a href="./MKContact.html#FAQ" target="_blank">FAQ</a> on my website!
                 </p>
             </div>
         </div>
