--- a/MKContact.html
+++ b/MKContact.html
@@ -94,7 +94,7 @@
                             <option disabled hidden selected>Subject line</option>
                             <option>I'd like to ask a question</option>
                             <option>I'd like to start return process</option>
-                            <option>I'd like to make a proposal</option>
+                            <option>I'd like to inquire about a special order</option>
                         </select>
                 </div>
                 <div class="message">
