--- a/MK.html
+++ b/MK.html
@@ -351,8 +351,10 @@
                 <div class="container" id="subscribeBox">
                     <h2>↠ SUBSCRIBE ↞</h2>
                         <p>Sign up to be notified for shop updates!</p>
-                    <form>
-                        <input type="email" placeholder="Type your Email" required>
+                    <form action="https://mathieknits.us20.list-manage.com/subscribe/post" method="POST">
+                        <input type="hidden" name="u" value="6894956b53562dbf90eccb070">
+                        <input type="hidden" name="id" value="a4da67fd6a">
+    <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
                         <br>
                             <button>SIGN ME UP!</button>
                     </form>
