--- a/MK.html
+++ b/MK.html
@@ -351,7 +351,7 @@
                 <div class="container" id="subscribeBox">
                     <h2>↠ SUBSCRIBE ↞</h2>
                         <p>Sign up to be notified for shop updates!</p>
-                    <form action="https://mathieknits.us20.list-manage.com/subscribe/post" method="POST">
+                    <form action="https://mathieknits.us20.list-manage.com/subscribe/post" target="_blank" method="POST">
                         <input type="hidden" name="u" value="6894956b53562dbf90eccb070">
                         <input type="hidden" name="id" value="a4da67fd6a">
     <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
