--- a/MKContact.html
+++ b/MKContact.html
@@ -79,14 +79,14 @@
     <div id="container">
         <h1 id="formH1">&bull; CONTACT ME &bull;</h1>
         <div class="underline"></div>
-            <form action="MKContact.php" method="post" id="contact_form">
+        <form action="https://formspree.io/mathieknits@gmail.com" method="POST" / id="contact_form">
                 <div class="name">
                     <label for="name"></label>
                         <input type="text" placeholder="My name is" name="name" id="name_input" required>
                 </div>
                 <div class="email">
                     <label for="email"></label>
-                        <input type="email" placeholder="My e-mail is" name="email" id="email_input" required>
+                        <input type="text" placeholder="My e-mail is" name="email" id="email_input" required>
                 </div>
                 <div class="subject">
                     <label for="subject"></label>
