--- a/MKContact.html
+++ b/MKContact.html
@@ -102,7 +102,7 @@
                         <textarea name="message" placeholder="I'd like to chat about" id="message_input" cols="30" rows="5" required></textarea>
                 </div>
                 <div class="submit">
-                    <input type="submit" value="Send Message" id="form_button" />
+                    <input type="submit" value="Send Message" id="form_button" target="_blank" />
                 </div>
         </form>
     </div>
