--- a/MKContact.html
+++ b/MKContact.html
@@ -79,7 +79,7 @@
     <div id="container">
         <h1 id="formH1">&bull; CONTACT ME &bull;</h1>
         <div class="underline"></div>
-        <form action="https://formspree.io/mathieknits@gmail.com" method="POST" / id="contact_form">
+        <form action="https://formspree.io/mathieknits@gmail.com" target="_blank" method="POST" / id="contact_form">
                 <div class="name">
                     <label for="name"></label>
                         <input type="text" placeholder="My name is" name="name" id="name_input" required>
