--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="col-2 justify-content-center" id="topNavRight">
-                <a href="./MK.html#subscribeCont"><button class="topNavLinks" id="conBut">SUBSCRIBE</button></a>
+                <a href="./Calendar.html#subscribeCont"><button class="topNavLinks" id="conBut">SUBSCRIBE</button></a>
             </div>
         </div>
     </div>
@@ -104,19 +104,23 @@
 
 <!-- subscribe -->
     <div class="container-fluid" id="subscribeCont">
+            <br>
         <div class="container" id="subscribe">
             <div class="row justify-content-center">
                 <div class="container" id="subscribeBox">
                     <h2>↠ SUBSCRIBE ↞</h2>
                         <p>Sign up to be notified for shop updates!</p>
-                        <form>
-                            <input type="email" placeholder="Type your Email" required>
+                    <form action="https://mathieknits.us20.list-manage.com/subscribe/post" target="_blank" method="POST">
+                        <input type="hidden" name="u" value="6894956b53562dbf90eccb070">
+                        <input type="hidden" name="id" value="a4da67fd6a">
+    <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
                         <br>
                             <button>SIGN ME UP!</button>
-                        </form>
+                    </form>
                 </div>
             </div>
         </div>
+            <br>
     </div>
 
 <!-- footer -->
