--- a/MKShopMittens.html
+++ b/MKShopMittens.html
@@ -106,7 +106,7 @@
                                     <i class="fa fa-shopping-cart"></i>
                                     
                                     <span id="textTop">CLICK FOR</span><br>
-                                    <span id="textTop">SHOP LISTING</span>
+                                    <span id="textTop">MORE INFO</span>
                                 
                                 </div>
                             </div>
