--- a/MK.html
+++ b/MK.html
@@ -217,22 +217,23 @@
             <div class="row justify-content-center">
                 <div class="col" id="calTitle">
                     <h1>↠ EVENTS ↞</h1>
+                        <hr id="eventHr">
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-4" id="calLeftCol">
-                    <p id="calHead">UPCOMING EVENTS</p>
+                <div class="col-5" id="calLeftCol">
+                    <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr"><br>
                     <p id="tentative">**TENTATIVE**</p>
-                        <br>
                     <p id="dates">October 27, 2018 ↠ Chic & Unique Market ↠ Shelby Township MI</p>
                     <p id="dates">December 6, 7, 8, 2018 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</p>
+                    <br>
                 </div>
-                <div class="col-4" id="calRightCol" >
-                    <p id="calHead"> PAST EVENTS </p>
-                        <br>
+                <div class="col-5" id="calRightCol" >
+                    <p id="calHead"> PAST EVENTS </p><hr id="eventHr"><br>
                     <p id="datesOld">October 28, 2018 ↠  Chic & Unique Market ↠ Shelby Township MI</p>
                     <p id="datesOld">October 5/6, 2018 ↠ Stony Creek Fall For Nature Craft Show ↠ Stony Creek MetroPark</p>
                     <p id="datesOld">September 16, 2018 ↠ CRWC Crafts on the Clinton Beer & Craft Show ↠ Yates Cider Mill</p>
+                    <br>
                 </div>
             </div>
         <br>
