--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</head>
 
 	<body>
+		<div class="container-fluid" id="backgroundImage">
 
 		<div class="container-flex" id="imageFill">
 			<div class="row">
@@ -33,6 +34,7 @@
 			<a href="https://www.instagram.com/mathieknits" target="_blank"><img src='./img/instagram.png' id="socialIcons"></a>
 		</div>
 		</div>
+	</body>
 	</body>
 
 </html>
