--- a/MK.html
+++ b/MK.html
@@ -222,7 +222,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-5" id="calLeftCol">
-                    <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr"><br>
+                    <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
                     <p id="tentative">**TENTATIVE**</p>
                     <p id="dates">October 27, 2018 ↠ Chic & Unique Market ↠ Shelby Township MI</p>
                     <p id="dates">December 6, 7, 8, 2018 ↠ Detroit Urban Craft Fair ↠ Masonic Temple, Detroit</p>
