--- a/MKAbout.html
+++ b/MKAbout.html
@@ -42,6 +42,34 @@
         </div>
     </div>
 
+<!-- mobile nav-->
+<nav>
+    <div class="container" id="mobileMenu">
+        <input id="responsive-menu" type="checkbox">
+        <label for="responsive-menu">MK MENU<span id="menu-icon"></span></label>
+        <div id="overlay"></div>
+        <ul>
+            <li><a href="./MK.html"><button class="mobileNavBtn">↠ HOME ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKAbout.html"><button class="mobileNavBtn">↠ ABOUT ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKShopMittens.html"><button class="mobileNavBtn">↠ SHOP ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKMittensPortfolio.html"><button class="mobileNavBtn">↠ PAST WORK ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKCalendar.html"><button class="mobileNavBtn">↠ CALENDAR ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKContact.html"><button class="mobileNavBtn">↠ CONTACT ↞<hr id="btnHr"></button></a></li>
+        </ul>
+        <ul id="social-media">
+            <li>
+                &nbsp;&nbsp;<a href="https://www.mathieknits.etsy.com" target="_blank"><img src='./img/etsy.png' id="socialIcons"></a>&nbsp;&nbsp;
+            </li>
+            <li>
+                &nbsp;&nbsp;<a href="https://www.facebook.com/mathieknits" target="_blank"><img src='./img/facebook.png' id="socialIcons"></a>&nbsp;&nbsp;
+            </li>
+            <li>
+                &nbsp;&nbsp;<a href="https://www.instagram.com/mathieknits" target="_blank"><img src='./img/instagram.png' id="socialIcons"></a>&nbsp;&nbsp;
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <!-- logoSpace -->
     <div class="container-fluid" id="logoSpace">
         <div class="row justify-content-center">
@@ -94,6 +122,7 @@
                 <p id="infoP">
                     &emsp;Started in 2016, MATHIEKNITS has evolved over the past few years, with more intricately knit items and a broadening of the range of products. MATHIEKNITS is a one-woman small business, crafting hand-knit accessories from all natural, hand-dyed, premium Merino wool.
                 </p>
+                <br>
                 <p id="infoP">
                     &emsp;I have been knitting for over 16 years. A drive to be creative, & encouragement from others who have received my items as gifts, has given me the confidence to open the MATHIEKNITS store as a part-time small business. 
                 </p>
