--- a/MK.html
+++ b/MK.html
@@ -100,7 +100,7 @@
                     <p>Crafted with all natural, hand-dyed merino wool.</p>
                     <p>Say no to synthetic yarn!</p>
                     <p>What makes this yarn so special?</p>
-                    <a href="./MKAbout.html#aboutMatLink"><button id="learnMoreBtn">LEARN MORE</button></a>
+                    <a href="./MKAbout.html#aboutWhite2"><button id="learnMoreBtn">LEARN MORE</button></a>
                 </div>
             </div>
         </div>
