--- a/MKAbout.html
+++ b/MKAbout.html
@@ -102,40 +102,33 @@
         </div>
     </div>
 <br>
-<br>
+
 
 <!-- about mk -->
-    <div class="container" id="aboutMK">
-        <div class="row justify-content-center" id="madRow">
+        <div class="container-fluid" id="aboutWhite">
+        <br>
+        <br>
+        <div class="row justify-content-center"id="emRow">
             <div class="col" id="aboutTitle">
                 <h1>↠ ABOUT MATHIEKNITS ↞</h1><hr id="new">
             </div>
         </div> 
-    <br>
-        <div class="row" id="logoBox">
-            <img src="./img/mkwork.jpg" id="mkImage">
-            <img src="./img/mittags.jpg" id="logoSquare">
-            <img src="./img/bags.jpg" id="mkImage">
-        </div>
-        <div class="row justify-content-center" id="mkRow">
-            <div class="col-5" id="aboutLeftCol">
+        <div class="row justify-content-center" id="emRow">
+            <div id="emImgBox"> 
+                    <img src="./img/mkwork.jpg" id="mkImage">
+                    <img src="./img/mittags.jpg" id="logoSquare">
+                    <img src="./img/bags.jpg" id="mkImage">
+                </div>
+            <div class="col-10" id="aboutEMCol">
+
                 <p id="infoP">
-                    &emsp;Started in 2016, MATHIEKNITS has evolved over the past few years, with more intricately knit items and a broadening of the range of products. MATHIEKNITS is a one-woman small business, crafting hand-knit accessories from all natural, hand-dyed, premium Merino wool.
-                </p>
-                <br>
-                <p id="infoP">
-                    &emsp;I have been knitting for over 16 years. A drive to be creative, & encouragement from others who have received my items as gifts, has given me the confidence to open the MATHIEKNITS store as a part-time small business. 
-                </p>
-            </div>
-            <div class="col-5" id="aboutRightCol" >
-                <p id="infoP">
-                    &emsp;All of my hand-knit items are named after some aspect of the natural world, may it be types of plants, animals, minerals, fossils, ecological terms.
+                     &emsp;Started in 2016, MATHIEKNITS has evolved over the past few years, with more intricately knit items and a broadening of the range of products. MATHIEKNITS is a one-woman small business, crafting hand-knit accessories from all natural, hand-dyed, premium Merino wool.
                 </p>
                 <p id="infoP">
-                    &emsp;I take pride in the items I create, have a keen sense for detail, and I meticulously choose colorways to represent my brand.
+                    &emsp;I have been knitting for over 16 years. A drive to be creative, & encouragement from others who have received my items as gifts, has given me the confidence to open the MATHIEKNITS store as a part-time small business. I take pride in the items I create, have a keen sense for detail, and I meticulously choose colorways to represent my brand.
                 </p>
                 <p id="infoP">
-                    &emsp;I exclusively use high quality merino wool in all of my garments & products. When purchasing knitwear, you should always check to see what it is made from! Not only do I only use the highest quality yarns in my products, I also only use yarn that is ethically sourced.
+                    &emsp;All of my hand-knit items are named after some aspect of the natural world, may it be types of plants, animals, minerals, fossils, ecological terms. I exclusively use high quality merino wool in all of my garments & products. When purchasing knitwear, you should always check to see what it is made from! Not only do I only use the highest quality yarns in my products, I also only use yarn that is ethically sourced.
                 </p>
             </div>
         </div>
@@ -145,26 +138,26 @@
 
 <!-- about em -->
     <div class="container-fluid" id="aboutEM">
-        <br>
+        <br><br>
         <div class="row justify-content-center"id="emRow">
             <div class="col" id="aboutTitle">
                 <h1>↠ ABOUT ME ↞</h1><hr id="new">
             </div>
         </div> 
         <div class="row justify-content-center" id="emRow">
-            <div class="col-5" id="emLeftCol">
-                <div id="emImgBox">
+            <div id="emImgBox">
+                    <img src="./img/tetonem.jpg" id="emImg">
+                    <img src="./img/tetonem.jpg" id="emImg">
                     <img src="./img/tetonem.jpg" id="emImg">
                 </div>
-            <br>
+            <div class="col-10" id="aboutEMCol">
+
                 <p id="infoP">
                     &emsp;My name is Emily Mathieson. I am a 29 year old graduate of the Biological Sciences, having focused my degree on Ecology & Fisheries. I completed an internship with the National Park Service as a Native Trout Conservationist in Yellowstone National Park. 
                 </p>
                 <p id="infoP">
                     &emsp;I am fascinated by the natural world, and this is where the inspiration for selecting the colors I work with comes from. All of my hand-knit items are named after some aspect of the natural world, may it be types of plants, animals, minerals, fossils, or ecological terms.
                 </p>
-            </div>
-            <div class="col-5" id="emRightCol" ><br>
                 <p id="infoP">
                     &emsp;Although I have a passion for biology, I have needed to switch gears and currently I am learning how to write & create code through online courses & experimenting with my own projects. I am currently working towards becoming a Web Developer ( this website was one of my first major projects! ), and have an exploratory interest in game design & development. 
                 </p>
@@ -176,32 +169,34 @@
                 </p>
             </div>
         </div>
+        <br>
     </div>
-
-<div id="aboutMatLink"><br></div>
+<br>
 <br>
 
 <!-- about merino -->
-    <div class="container" id="aboutMaterials">
-        <div class="row justify-content-center" id="emRow">
+    <div class="container-fluid" id="aboutWhite2">
+        <br>
+        <div class="row justify-content-center"id="emRow">
             <div class="col" id="aboutTitle">
                 <h1>↠ MERINO WOOL ↞</h1><hr id="new">
             </div>
-        </div>
-    <br>
-        <div class="row justify-content-center" id="matsImageBox">
-            <img src="./img/natdyes.jpg" id="threeImage">
-            <img src="./img/merinosheep.jpg" id="threeImage">
-            <img src="./img/dyedyarn.jpg" id="threeImage">
-        </div>
-        <div class="row justify-content-center" id="matsAbout">
+        </div> 
+        <div class="row justify-content-center" id="emRow">
+            <div id="emImgBox">
+                    <img src="./img/natdyes.jpg" id="threeImage">
+                    <img src="./img/merinosheep.jpg" id="threeImage">
+                    <img src="./img/dyedyarn.jpg" id="threeImage">
+                </div>
+
+                <div class="row justify-content-center" id="emRow">
             <p id="matsP">
                     Merino wool isn't your average wool. It is a type of wool that comes from a particular breed of sheep, and is prized for its quality & softness.
             </p>
             <p id="matsP">There are many benefits to choosing Merino wool, including:</p>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-5" id="matsLeftCol">
+            </div>
+
+            <div class="col-10" id="aboutEMCol">
                 <p id="infoP">
                     ↠ WARMTH : Merino wool contains crimps. When woven into knitwear, these crimps hit each other as you move, creating air-trapping pockets. Air that cannot circulate retains heat that is naturally produced from the body. Result? You are toasty warm!
                 </p>
@@ -211,8 +206,6 @@
                 <p id="infoP">
                     ↠ SOFTNESS: The common reaction to wool can be a reminder of all things itchy, scratchy, uncomfortable, and too warm. Merino wool, on the other hand, is ultra-fine, giving it a soft quality.
                 </p>
-            </div>
-            <div class="col-5" id="matsRightCol" >
                 <p id="infoP">
                         ↠ ANTIBACTERIAL : Merino wool continues to be the superhero of wool with its antibacterial and water-repelling properties. This fiber can hold water without getting damp and it is a safe choice for germ laden environments. It is also naturally allergy-free.
                 </p>
@@ -229,27 +222,30 @@
 <br>
 
 <!-- about materials -->
-    <div class="container-fluid" id="aboutMad">
-            <br>
-        <div class="row justify-content-center" id="madRow">
+    <div class="container-fluid" id="aboutEM">
+        <br>
+        <div class="row justify-content-center"id="emRow">
             <div class="col" id="aboutTitle">
                 <h1>↠ MADELINETOSH ↞</h1><hr id="new">
             </div>
-        </div>
-            <br>
-        <div class="row justify-content-center" id="matsImageBox">
-            <img src="./img/madtosh1.jpg" id="threeImage">
-            <img src="./img/madtoshlogo.jpg" id="threeImage">
-            <img src="./img/madtosh2.jpg" id="threeImage">
-        </div>
-        <div class="row justify-content-center" id="madAbout">
+        </div> 
+        <div class="row justify-content-center" id="emRow">
+            <div id="emImgBox">
+                    <img src="./img/madtosh1.jpg" id="threeImage">
+                    <img src="./img/madtoshlogo.jpg" id="threeImage">
+                    <img src="./img/madtosh2.jpg" id="threeImage">
+                </div>
+
+                <div class="row justify-content-center" id="madAbout">
             <p id="matsP">
                 The majority of my work is constructed from using combinations of Madelinetosh yarn.
             </p>
             <p id="matsP">I am never disapointed by both the quality and color intensity of these yarns!</p>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-8" id="madCol">
+
+        
+            <div class="col-10" id="aboutEMCol">
+
                 <p id="infoP">
                     &emsp;Madelinetosh Co., America’s largest hand-dyed yarn producer, was founded in 2006 by owner Amy Hendrix as an Etsy shop and has since grown into an international wholesale distributor to independent craft stores around the world.
                 </p>
@@ -262,6 +258,7 @@
             </div>
         </div>
     </div>
+
 
 <!-- footer -->
         <div class="container-fluid" id="footer">
