--- a/MKContact.html
+++ b/MKContact.html
@@ -138,10 +138,7 @@
 <br>
 
 <!-- FAQ -->
-    <div class="container">
-        <div class="col-3"></div>
-    </div>
-
+    
     <div class="container" id="FAQ">
         <div class="row justify-content-center">
             <div class="col" >
@@ -149,22 +146,22 @@
             </div>
         </div>
             <div class="row justify-content-center" id="FAQrow">
+
                 <p id="matsP">
-                        Below are some questions people ask me most often! If you have any other questions, please feel free to email me at MATHIEKNITS@Gmail.com!
+                    <br>
+                        Below are some questions people ask me most often! If you have any other questions, please feel free to email me at MATHIEKNITS@GMAIL.com
                     </p>
             </div>
         <div class="row justify-content-center">
-            <div class="col-5" id="FAQLeft">
+            <div class="col-11" id="FAQCol">
                 <h4>Can I wash it?</h4>
                     <p id="infoP">  
                         ↠ Yes! Gently hand wash in cold water and lay flat to dry. You CAN put these items in the washing machine & dryer if you wish, but it is recommended to set to gentle/delicate cycle with LOW heat.
                     </p>
-                        <br>
                 <h4>Will it fit me?</h4>
                     <p id="infoP">
                         ↠ All individual items have a size description on the etsy shop link. Most items are crafted towards the average woman. If you are concerned about sizing, and feel you would like more information or need a special order, please email me at mathieknits@gmail.com
                     </p>
-                        <br>
                 <h4>What is your return policy?</h4>
                     <p id="infoP">
                         ↠ I accept returns under the following conditions: <br>
@@ -174,8 +171,6 @@
                         Items cannot be returned if modified in any way from which you received them. 
                         Original shipping costs cannot be refunded, and you must pay for return shipping fees.
                     </p>
-            </div>
-            <div class="col-5" id="FAQRight" >
                 <h4>Do you do special orders?</h4>
                     <p id="infoP">
                         ↠ On occasion, yes! If there is a particular colorway you are looking for in an item type, send me an email at mathieknits@gmail.com to discuss options. All specials orders must have a 50% down payment, and the remaining is due at shipping time.
@@ -193,8 +188,7 @@
         </div>
     </div>
 
-    <div class="container"><div class="col-3">
-    </div>
+
 
 </div>
 <br>
