--- a/MKShopMisc.html
+++ b/MKShopMisc.html
@@ -46,6 +46,35 @@
         </div>
     </div>
 
+<!-- mobile nav-->
+<nav>
+    <div class="container" id="mobileMenu">
+        <input id="responsive-menu" type="checkbox">
+        <label for="responsive-menu">MK MENU<span id="menu-icon"></span></label>
+        <div id="overlay"></div>
+        <ul>
+            <li><a href="./MK.html"><button class="mobileNavBtn">↠ HOME ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKAbout.html"><button class="mobileNavBtn">↠ ABOUT ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKShopMittens.html"><button class="mobileNavBtn">↠ SHOP ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKMittensPortfolio.html"><button class="mobileNavBtn">↠ PAST WORK ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKCalendar.html"><button class="mobileNavBtn">↠ CALENDAR ↞<hr id="btnHr"></button></a></li>
+            <li><a href="./MKContact.html"><button class="mobileNavBtn">↠ CONTACT ↞<hr id="btnHr"></button></a></li>
+        </ul>
+        <ul id="social-media">
+            <li>
+                &nbsp;&nbsp;<a href="https://www.mathieknits.etsy.com" target="_blank"><img src='./img/etsy.png' id="socialIcons"></a>&nbsp;&nbsp;
+            </li>
+            <li>
+                &nbsp;&nbsp;<a href="https://www.facebook.com/mathieknits" target="_blank"><img src='./img/facebook.png' id="socialIcons"></a>&nbsp;&nbsp;
+            </li>
+            <li>
+                &nbsp;&nbsp;<a href="https://www.instagram.com/mathieknits" target="_blank"><img src='./img/instagram.png' id="socialIcons"></a>&nbsp;&nbsp;
+            </li>
+        </ul>
+    </div>
+</nav>
+   
+
 <!-- logoSpace -->
     <div class="container-fluid" id="logoSpace">
         <div class="row justify-content-center">
