--- a/MKShopMittens.html
+++ b/MKShopMittens.html
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                             <div class="name2">
-                                <span id="name2">↟ {{item.name}} ↟</span>
+                                <span id="name2">↟{{item.name}}↟</span>
                         </div>
                     </div>
 
@@ -168,7 +168,7 @@
         </div>
     </div>
 
-        <div class="col justify-content-center">
+        <div class="col justify-content-center" id="infoSide">
             <p id="itemTitle"> {{ productName }}</p>
 
             <p id="itemMaterials">&nbsp;Madelinetosh<br>&nbsp;{{ materials }}</p>
@@ -191,7 +191,7 @@
         </div>
     </div>
 </div>
-</div>
+
 
 <br>
 <br>
@@ -205,6 +205,7 @@
             </div>
         </div>
     </div>
+</div>
 <br>
 <br>
 
